--- a/src/components/Persons/Person/Person.css
+++ b/src/components/Persons/Person/Person.css
@@ -7,3 +7,9 @@
     background-color: orange;
     text-align: center; 
 }
+
+@media (min-width: 500px) {
+    .Person {
+        width: 450px;
+    }
+}
